[package]
name = "runs"
version = "0.1.1"
authors = ["timothy adigun <2teezrust@gmail.com>"]
description = "A CLI tool to run Rust documentation tests (doctests) on standalone .rs files by generating a temporary Cargo project."
readme = "README.md"
license = "MIT"
repository = "https://github.com/2teez/runs"
documentation = "https://github.com/2teez/runs"
keywords = ["doctest", "automation", "cargo", "standalone", "cli"]
categories = [
    "development-tools::testing",
    "command-line-utilities",
    "development-tools",
    "filesystem",
    "rust-patterns",
]

edition = "2021"

[dependencies]

[[bin]]
name = "runs"
path = "src/bin/main.rs"
